# classifier

./: .env.example  .gitignore  README.md  api.py  demo_classifier.ipynb  main.py  pyproject.toml  settings.py  test_classifier.py
classifier/: __init__.py  api_classification.py  api_models.py  core.py  models.py  pdf_extraction.py  text_processing.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
documents/: test.txt  test_legal.txt
